<resources>
    <string name="app_name">FireStoreChatApp</string>
    <string name="all_users">All Users</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
</resources>
